--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ const tagline = "Researcher in information systems and human-centered computing,
 <Base>
   <header class="mb-8">
     <h1 class="text-3xl font-semibold tracking-tight">Muhammad Al Terra</h1>
-    <p class="mt-1 text-zinc-600 dark:text-zinc-400">M.S. Information Systems and Operations Managemnt, University of Florida — GPA 4.0 <br/> B.S. CS, Bandung Institute of Technology — GPA 3.7</p>
+    <p class="mt-1 text-zinc-600 dark:text-zinc-400">M.S. Information Systems and Operations Managemnt, University of Florida — GPA 4.0 <br/> B.S. CS, Bandung Institute of Technology — GPA 3.5</p>
     <p class="mt-2">{tagline}</p>
     <Nav />
   </header>
@@ -24,7 +24,7 @@ const tagline = "Researcher in information systems and human-centered computing,
 
     <h3>Experience</h3>
     <ul>
-      <li>Teaching Assitant — University of Florida</li>
+      <li>Teaching Assistant — University of Florida</li>
       <li>International Recruitment Chair — UF Association for Information Systems</li>
       <li>Software Engineer — ForexIMF (Fullstack Developer)</li>
       <li>Software Engineer — DurianPay (Frontend Developer)</li>
